WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
287299
Screen sharing doesn't start when site isolation is enabled
https://bugs.webkit.org/show_bug.cgi?id=287299
Summary
Screen sharing doesn't start when site isolation is enabled
Ben Nham
Reported
2025-02-07 15:51:54 PST
Trying to start a display stream from an OOP iframe with site isolation enabled doesn't start--the promise never even settles.
Attachments
Add attachment
proposed patch, testcase, etc.
Ben Nham
Comment 1
2025-02-07 15:51:55 PST
<
rdar://problem/129194055
>
Ben Nham
Comment 2
2025-02-07 15:54:16 PST
Pull request:
https://github.com/WebKit/WebKit/pull/40252
EWS
Comment 3
2025-02-20 08:45:42 PST
Committed
290715@main
(1935a83b4fda): <
https://commits.webkit.org/290715@main
> Reviewed commits have been landed. Closing PR #40252 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug